# backend/src/products/application/controllers/v1/get-all-products.controller.ts
@@ -7,7 +7,7 @@ import {
   queryParam,
 } from 'inversify-express-utils'
 import { GetAllProductsQuery } from '@app/products/application/get-all-products.query'
-import { GetAllProductsItemResponse as GetAllProductsResponse } from '@app/products/application/controllers/v1/get-all-products.response'
+import { GetAllProductsItemResponse } from '@app/products/application/controllers/v1/get-all-products.response'
 
 @controller('/api/v1/products')
 export class GetAllProductsController extends BaseHttpController {
@@ -20,14 +20,14 @@ export class GetAllProductsController extends BaseHttpController {
 
   @httpGet('/')
   public async get(
-    @queryParam('page') page?: number,
-    @queryParam('itemsPerPage') itemsPerPage?: number
+    @queryParam('limit') limit?: number,
+    @queryParam('offset') offset?: number
   ): Promise<interfaces.IHttpActionResult> {
     const result = await this.query.execute({
-      page,
-      itemsPerPage,
+      limit,
+      offset,
     })
 
-    return this.json(GetAllProductsResponse.fromPaginatedProducts(result))
+    return this.json(GetAllProductsItemResponse.fromProducts(result))
   }
 }
